# ebpf-udp-proxy

./: .gitignore  Cargo.toml  Dockerfile.runtime  QUICK_START.md  README.md  TESTING_SUMMARY.md
k8s/: configmap-xdp.yaml  daemonset-xdp.yaml  metallb-config.yaml  service-xdp-metallb.yaml
udp-fanout-common/src/: lib.rs
udp-fanout-ebpf-xdp/: Cargo.toml
udp-fanout-ebpf-xdp-src/src/: main.rs
udp-fanout-ebpf-xdp/src/: main.rs
udp-fanout/src/: af_xdp.rs  config.rs  main.rs  metrics.rs  tcp_forward.rs  xdp_manager.rs
xtask/src/: main.rs
